--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.10"]
+        python-version: ["3.9"]
 
     runs-on: ${{ matrix.platform }}
 
@@ -22,7 +22,8 @@ jobs:
         shell: "bash -l {0}"
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Get conda
         uses: conda-incubator/setup-miniconda@v2.2.0
