--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,18 @@
 [build-system]
-requires = ["setuptools", "wheel", "scikit-build-core>=0.4.7", "pybind11"]
 build-backend = "scikit_build_core.build"
+requires = ["setuptools", "wheel", "scikit-build-core>=0.4.7", "pybind11"]
 
 [tool.scikit-build]
-minimum-version = "0.4.7"
 cmake.minimum-version = "3.26.1"
-ninja.minimum-version = "1.11"
+minimum-version = "0.4.7"
 ninja.make-fallback = false
+ninja.minimum-version = "1.11"
 
 [project]
-name = "pyclesperanto"
-version = "0.7.1"
-description = "GPU-accelerated image processing in python using OpenCL"
-readme = "README.md"
 authors = [
-  { name = "Stephane Rigaud", email = "stephane.rigaud@pasteur.fr" }, 
-  { name = "Robert Haase", email = "robert.haase@tu-dresden.de" },
+  {name = "Stephane Rigaud", email = "stephane.rigaud@pasteur.fr"},
+  {name = "Robert Haase", email = "robert.haase@tu-dresden.de"},
 ]
-requires-python = ">=3.7"
 classifiers = [
   "Development Status :: 2 - Pre-Alpha",
   "Intended Audience :: Science/Research",
@@ -34,12 +29,17 @@ dependencies = [
   "toolz; python_version >='3.7'",
   "matplotlib; python_version >='3.7'",
 ]
+description = "GPU-accelerated image processing in python using OpenCL"
+name = "pyclesperanto"
+readme = "README.md"
+requires-python = ">=3.7"
+version = "0.7.1"
 
 [project.urls]
-Source = "https://github.com/clEsperanto/pyclesperanto/"
 Documentation = "https://clesperanto.github.io/pyclesperanto/"
-Issues = "https://github.com/clEsperanto/pyclesperanto/issues"
 Examples = "https://clesperanto.github.io/pyclesperanto/demos/"
+Issues = "https://github.com/clEsperanto/pyclesperanto/issues"
+Source = "https://github.com/clEsperanto/pyclesperanto/"
 
 [tool.pytest.ini_options]
 addopts = "-ra -q"
@@ -50,7 +50,7 @@ build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
 build-frontend = "build"
 build-verbosity = 1
 test-command = "pytest {project}/tests/test_import.py"
-test-requires = ["numpy", "pytest", "pytest-cov", "pytest-benchmark"]
+test-requires = ["pytest", "pytest-cov", "pytest-benchmark"]
 
 [tool.cibuildwheel.linux]
 before-all = ["bash {package}/scripts/build-opencl-linux.sh"]
@@ -59,9 +59,9 @@ skip = ["cp27-*", "pp*", "*-musllinux*", "*_i686"]
 
 [tool.cibuildwheel.windows]
 before-all = "bash {package}/scripts/build-opencl-windows.sh"
-environment = { SKBUILD_CMAKE_ARGS = "-DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib';-DOpenCL_INCLUDE_DIRS:PATH='C:/Program Files/OpenCL-ICD-Loader/include/'" }
+environment = {SKBUILD_CMAKE_ARGS = "-DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib';-DOpenCL_INCLUDE_DIRS:PATH='C:/Program Files/OpenCL-ICD-Loader/include/'"}
 skip = ["cp27-*", "pp*", "*-win32"]
 
 [tool.cibuildwheel.macos]
-environment = { MACOSX_DEPLOYMENT_TARGET = '10.14' }
+environment = {MACOSX_DEPLOYMENT_TARGET = '10.14'}
 skip = ["cp27-*", "pp*", "*_universal2"]
