use conda for Prepare step

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -42,7 +42,7 @@ jobs:
           channels: conda-forge
 
       - name: Prepare
-        run: pip install -y pytest pytest-cov pytest-benchmark
+        run: conda install -y pytest pytest-cov pytest-benchmark
 
       - name: Install OpenCL (pocl)
         run: conda install -y pocl 
