--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9"]
-        platform: [ubuntu-latest] #, windows-latest, macos-latest] 
+        platform: [ubuntu-latest, macos-latest] #, windows-latest] 
 
     # The setup-miniconda action needs this to activate miniconda
     defaults:
