--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         platform: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.9"]
