--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,7 +1,6 @@
 {% set name = "pyclesperanto" %}
 {% set version = "0.7.1" %}
-{% set sha256 = "5e4273fb1b89c2df6cbf850903512d0334945ae3c863b1b8da5d88e357700529" %}
-{% set build_number = 0 %}
+{% set sha256 = "1f65cc7e9f8348faf4299c3aed1e4873c2b2db8e358f244d9664564054a40309" %}
 
 package:
   name: {{ name|lower }}
@@ -14,17 +13,15 @@ source:
   path: ..
 
 build:
-  number: {{ build_number }}
+  number: 0
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
     - python
     - {{ compiler('cxx') }}
-    # - {{ compiler('m2w64_cxx') }}      # [win and vc<14]
   host:
     - python
-    # - libpython      # [win and vc<14]
     - scikit-build-core
     - pybind11
     - cmake
@@ -34,7 +31,7 @@ requirements:
     - python
     - numpy
     - toolz
-    - matplotlib
+    - matplotlib-base
     - khronos-opencl-icd-loader      # [win or osx]
     - ocl-icd      # [linux]
 
@@ -57,7 +54,8 @@ about:
     summary: GPU-accelerated Image Processing library using OpenCL
     description: |
         pyclesperanto is the python package of clEsperanto - a multi-language framework for GPU-accelerated image processing.
-        clEsperanto uses OpenCL kernels from CLIJ. This package relies on the CLIc back-end for processing.
+        clEsperanto uses OpenCL kernels extended with CLIJ custom syntax.
 extra:
     recipe-maintainers:
         - StRigaud
+        - haesleinhuepf
