--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,12 +55,13 @@ jobs:
       - name: Test
         if: matrix.platform == 'ubuntu-latest'
         run: |
-          pytest -v --cov=./ --cov-report=xml
+          mkdir coverage && cd coverage
+          pytest -v --cov=pyclesperanto ../tests/ --cov-report=xml
 
       - name: Coverage
         if: matrix.platform == 'ubuntu-latest'
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          files: ./coverage.xml
+          files: ./coverage/coverage.xml
           fail_ci_if_error: true # optional (default = false)
