--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Get conda - ${{ matrix.python-version }}
-        uses: conda-incubator/setup-miniconda@v2.2.0
+        uses: conda-incubator/setup-miniconda@v3
         with:
-          miniconda-version: "latest"
-          auto-update-conda: true
-          activate-environment: test
           python-version: ${{ matrix.python-version }}
-          channels: conda-forge
+          miniforge-variant: Mambaforge
+          miniforge-version: latest
+          activate-environment: test
+          use-mamba: true
       - name: Prepare
         run: conda install -y pytest pytest-cov pytest-benchmark scikit-image
       - name: Install OpenCL (pocl)
@@ -41,10 +41,12 @@ jobs:
       - name: Build
         run: pip install . -vvv --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PREFIX
       - name: Cache environment
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: $CONDA_PREFIX
           key: ${{ runner.os }}-conda-${{ hashFiles('**/setup.py') }}
+        env:
+          CACHE_NUMBER: 0 # Increase this value ro rest cache
 
   test:
     needs: build
@@ -62,10 +64,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Restore cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: $CONDA_PREFIX
           key: ${{ runner.os }}-conda-${{ hashFiles('**/setup.py') }}
+      - name: Activate environment
+        run: conda activate test
       - name: Test
         if: matrix.platform == 'ubuntu-latest'
         run: mkdir coverage && cd coverage && pytest --cov=pyclesperanto ../tests/
