--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,20 +31,20 @@ jobs:
           activate-environment: test
           use-mamba: true
       - name: Prepare
-        run: conda install -y pytest pytest-cov pytest-benchmark scikit-image
+        run: mamba install -y pytest pytest-cov pytest-benchmark scikit-image
       - name: Install OpenCL (pocl)
         if: matrix.platform != 'windows-latest'
-        run: conda install -y pocl
+        run: mamba install -y pocl
       - name: Install OpenCL (oclgrind)
         if: matrix.platform == 'windows-latest'
-        run: conda install -y oclgrind
+        run: mamba install -y oclgrind
       - name: Build
         run: pip install . -vvv --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PREFIX
       - name: Cache environment
         uses: actions/cache@v3
         with:
           path: $CONDA_PREFIX
-          key: ${{ runner.os }}-conda-${{ hashFiles('**/setup.py') }}
+          key: ${{ runner.os }}-conda-${{ hashFiles('**/pyproject.toml') }}
         env:
           CACHE_NUMBER: 0 # Increase this value ro rest cache
 
@@ -67,9 +67,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: $CONDA_PREFIX
-          key: ${{ runner.os }}-conda-${{ hashFiles('**/setup.py') }}
+          key: ${{ runner.os }}-conda-${{ hashFiles('**/pyproject.toml') }}
       - name: Activate environment
-        run: conda activate test
+        run: mamba activate test
       - name: Test
         if: matrix.platform == 'ubuntu-latest'
         run: mkdir coverage && cd coverage && pytest --cov=pyclesperanto ../tests/
@@ -83,10 +83,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Restore cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: $CONDA_PREFIX
-          key: ${{ runner.os }}-conda-${{ hashFiles('**/setup.py') }}
+          key: ${{ runner.os }}-conda-${{ hashFiles('**/pyproject.toml') }}
       - name: Coverage
         uses: codecov/codecov-action@v3
         with:
