--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ on:
 jobs:
 
   build:
-    name: Build (${{ matrix.platform }} - ${{ matrix.python-version }})
+
+    name: ${{ matrix.platform }} (${{ matrix.python-version }})
     runs-on: ${{ matrix.platform }}
     strategy:
       fail-fast: false
@@ -19,10 +20,28 @@ jobs:
     defaults:
       run:
         shell: "bash -l {0}"
+
     steps:
+      - name: Get Date
+        id: get-date
+        run: echo "today=$(/bin/date -u '+%Y%m%d')" >> $GITHUB_OUTPUT
+
+      - name: Cache conda
+        id: cache-conda
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.CONDA }}/envs
+          key:
+            conda-${{ matrix.platform }}--${{ steps.get-date.outputs.today }}-${{ hashFiles('**/pyproject.toml') }}-${{ env.CACHE_NUMBER }}
+        env:
+          CACHE_NUMBER: 0
+
       - name: Checkout
+        id: checkout
         uses: actions/checkout@v4
+
       - name: Get conda - ${{ matrix.python-version }}
+        id: get-conda
         uses: conda-incubator/setup-miniconda@v3
         with:
           python-version: ${{ matrix.python-version }}
@@ -30,135 +49,38 @@ jobs:
           miniforge-version: latest
           activate-environment: test
           use-mamba: true
-      - name: Prepare
+
+      - name: Dependencies
+        id: install-dependencies
         run: mamba install -y pytest pytest-cov pytest-benchmark scikit-image
+
       - name: Install OpenCL (pocl)
+        id: install-pocl
         if: matrix.platform != 'windows-latest'
         run: mamba install -y pocl
+
       - name: Install OpenCL (oclgrind)
+        id: install-oclgrind
         if: matrix.platform == 'windows-latest'
         run: mamba install -y oclgrind
+
       - name: Build
-        run: pip install . -vvv --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PREFIX
-      - name: Cache environment
-        uses: actions/cache@v3
-        with:
-          path: $CONDA_PREFIX
-          key: ${{ runner.os }}-conda-${{ hashFiles('**/pyproject.toml') }}
-        env:
-          CACHE_NUMBER: 0 # Increase this value ro rest cache
+        id: build
+        run: |
+          pip install . -vvv --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PREFIX
 
-  test:
-    needs: build
-    if: success()
-    name: Test (${{ matrix.platform }} - ${{ matrix.python-version }})
-    runs-on: ${{ matrix.platform }}
-    strategy:
-      matrix:
-        python-version: ["3.9"]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    defaults:
-      run:
-        shell: "bash -l {0}"
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Restore cache
-        uses: actions/cache@v3
-        with:
-          path: $CONDA_PREFIX
-          key: ${{ runner.os }}-conda-${{ hashFiles('**/pyproject.toml') }}
-      - name: Activate environment
-        run: mamba activate test
       - name: Test
+        id: test
         if: matrix.platform == 'ubuntu-latest'
-        run: mkdir coverage && cd coverage && pytest --cov=pyclesperanto ../tests/
+        run: |
+          mkdir coverage && cd coverage
+          pytest --cov=pyclesperanto ../tests/ --cov-report=xml
 
-  coverage:
-    needs: test
-    if: success()
-    name: Coverage
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Restore cache
-        uses: actions/cache@v3
-        with:
-          path: $CONDA_PREFIX
-          key: ${{ runner.os }}-conda-${{ hashFiles('**/pyproject.toml') }}
       - name: Coverage
+        id: coverage
+        if: matrix.platform == 'ubuntu-latest'
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           files: ./coverage/coverage.xml
           fail_ci_if_error: true # optional (default = false)
-
-
-# name: Build
-
-# on:
-#   push:
-#     branches: [ main ]
-#   pull_request:
-#     branches: [ main ]
-
-# jobs:
-
-#   build:
-
-#     name: ${{ matrix.platform }} (${{ matrix.python-version }})
-#     runs-on: ${{ matrix.platform }}
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         python-version: ["3.9"]
-#         platform: [ubuntu-latest, macos-latest, windows-latest]
-
-#     # The setup-miniconda action needs this to activate miniconda
-#     defaults:
-#       run:
-#         shell: "bash -l {0}"
-
-#     steps:
-
-#       - name: Checkout
-#         uses: actions/checkout@v4
-
-#       - name: Get conda - ${{ matrix.python-version }}
-#         uses: conda-incubator/setup-miniconda@v2.2.0
-#         with:
-#           miniconda-version: "latest"
-#           auto-update-conda: true
-#           activate-environment: test
-#           python-version: ${{ matrix.python-version }}
-#           channels: conda-forge
-
-#       - name: Prepare
-#         run: conda install -y pytest pytest-cov pytest-benchmark scikit-image
-
-#       - name: Install OpenCL (pocl)
-#         if: matrix.platform != 'windows-latest'
-#         run: conda install -y pocl
-
-#       - name: Install OpenCL (oclgrind)
-#         if: matrix.platform == 'windows-latest'
-#         run: conda install -y oclgrind
-
-#       - name: Build
-#         run: |
-#           pip install . -vvv --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PREFIX
-
-#       - name: Test
-#         if: matrix.platform == 'ubuntu-latest'
-#         run: |
-#           mkdir coverage && cd coverage
-#           pytest --cov=pyclesperanto ../tests/ --cov-report=xml
-
-#       - name: Coverage
-#         if: matrix.platform == 'ubuntu-latest'
-#         uses: codecov/codecov-action@v3
-#         with:
-#           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-#           files: ./coverage/coverage.xml
-#           fail_ci_if_error: true # optional (default = false)
