--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ option(BUILD_SHARED_LIBS OFF)
 
 ## CLIc dependency
 set(CLIC_REPO_TAG v0.8) # branch name for dev
-set(CLIC_REPO_URL https://github.com/clEsperanto/CLIc_prototype.git)
+set(CLIC_REPO_URL https://github.com/clEsperanto/CLIc.git)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/clic EXCLUDE_FROM_ALL)
 
 
