--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,22 +14,15 @@ build-type = "Release"
 minimum-version = "3.26.1"
 
 [tool.scikit-build.sdist]
-exclude = [
-  ".flake8",
-  ".git*",
-  "*.yaml",
-  "*.ipynb",
-  "*.yml",
-  "docs",
-]
+exclude = [".flake8", ".git*", "*.yaml", "*.ipynb", "*.yml", "docs"]
 
 [project]
 authors = [
-  {name = "Stephane Rigaud", email = "stephane.rigaud@pasteur.fr"},
-  {name = "Robert Haase", email = "robert.haase@tu-dresden.de"},
+  { name = "Stephane Rigaud", email = "stephane.rigaud@pasteur.fr" },
+  { name = "Robert Haase", email = "robert.haase@tu-dresden.de" },
 ]
 classifiers = [
-  "Development Status :: 2 - Alpha",
+  "Development Status :: 3 - Alpha",
   "Programming Language :: C++",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: BSD License",
@@ -75,9 +68,9 @@ skip = ["cp27-*", "pp*", "*-musllinux*", "*_i686"]
 
 [tool.cibuildwheel.windows]
 before-all = "bash {package}/scripts/build-opencl-windows.sh"
-environment = {SKBUILD_CMAKE_ARGS = "-DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib';-DOpenCL_INCLUDE_DIRS:PATH='C:/Program Files/OpenCL-ICD-Loader/include/'"}
+environment = { SKBUILD_CMAKE_ARGS = "-DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib';-DOpenCL_INCLUDE_DIRS:PATH='C:/Program Files/OpenCL-ICD-Loader/include/'" }
 skip = ["cp27-*", "pp*", "*-win32"]
 
 [tool.cibuildwheel.macos]
-environment = {MACOSX_DEPLOYMENT_TARGET = '10.14'}
+environment = { MACOSX_DEPLOYMENT_TARGET = '10.14' }
 skip = ["cp27-*", "pp*", "*_universal2"]
