--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
         if: matrix.platform == 'windows-latest'
         run: |
           mamba install -y  intel-opencl-rt khronos-opencl-icd-loader oclgrind 
+          echo %PATH%
 
       - name: Build
         id: build
