add check on cmake clic

--- a/src/clic/CMakeLists.txt
+++ b/src/clic/CMakeLists.txt
@@ -1,6 +1,13 @@
-
 ## fetch CLIc from repo release
 include(FetchContent)
+
+if(NOT DEFINED CLIC_REPO_URL)
+  message(FATAL_ERROR "CLIC_REPO_URL is not set")
+endif()
+
+if(NOT DEFINED CLIC_REPO_TAG)
+  message(FATAL_ERROR "CLIC_REPO_TAG is not set")
+endif()
 
 FetchContent_Declare(
   CLIc
