--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,21 +4,43 @@ repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
+    -   id: check-toml
+    -   id: check-yaml
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-added-large-files
-    -   id: check-toml
     -   id: check-case-conflict
+    -   id: check-merge-conflict
+    -   id: check-symlinks
     -   id: mixed-line-ending
+    -   id: name-tests-test
 
-    # black - code formatting
+# black - code formatting
 -   repo: https://github.com/psf/black
     rev: 22.8.0
     hooks:
     -   id: black
 
-    # flake8 - linting
+# isort - import sorting
+-   repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+    -   id: isort
+
+# flake8 - linting
 -   repo: https://github.com/pycqa/flake8
     rev: 5.0.4
     hooks:
-      - id: flake8
+    -   id: flake8
+
+# mypy - static type checking
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.910
+    hooks:
+    -   id: mypy
+
+# pydocstyle - docstring style checking
+-   repo: https://github.com/pycqa/pydocstyle
+    rev: 6.1.1
+    hooks:
+    -   id: pydocstyle
