--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -2,6 +2,10 @@ name: Deploy
 
 # Build on every branch push, tag push, and pull request change:
 on:
+  workflow_run:
+      workflows: ["Build"]
+      types:
+        - completed
   push:
     branches: [main]
     paths-ignore:
