--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,11 +20,11 @@ repos:
     hooks:
     -   id: black
 
-# isort - import sorting
--   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-    -   id: isort
+# # isort - import sorting
+# -   repo: https://github.com/pycqa/isort
+#     rev: 5.12.0
+#     hooks:
+#     -   id: isort
 
 # flake8 - linting
 -   repo: https://github.com/pycqa/flake8
