--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.5.0
     hooks:
     -   id: check-toml
     -   id: check-yaml
@@ -16,18 +16,18 @@ repos:
 
 # black - code formatting
 -   repo: https://github.com/psf/black
-    rev: 22.8.0
+    rev: 24.4.2
     hooks:
     -   id: black
 
-# # isort - import sorting
-# -   repo: https://github.com/pycqa/isort
-#     rev: 5.12.0
-#     hooks:
-#     -   id: isort
+# isort - import sorting
+-   repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+    -   id: isort
 
 # flake8 - linting
 -   repo: https://github.com/pycqa/flake8
-    rev: 5.0.4
+    rev: 7.0.0
     hooks:
     -   id: flake8
