--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -53,7 +53,8 @@ jobs:
         id: install-dependencies
         run: |
           mamba install -y sphinx nbsphinx sphinx_rtd_theme sphinx-autodoc-typehints pandoc jupyter
-
+          cd docs
+          make clean && make html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
