--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Dependencies
         id: install-dependencies
         run: |
+          mamba activate test
           mamba install -y sphinx nbsphinx sphinx_rtd_theme sphinx-autodoc-typehints pandoc jupyter
           cd docs
           make clean && make html
