--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,8 +55,15 @@ addopts = "-ra -q"
 testpaths = ["tests"]
 
 [tool.cibuildwheel]
-# build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
-build = "cp3{7..12}-*"
+build = [
+  "cp37-*",
+  "cp38-*",
+  "cp39-*",
+  "cp310-*",
+  "cp311-*",
+  "cp312-*",
+  "cp313-*",
+]
 skip = ["cp27-*", "pp*", "*-win32", "*-musllinux*", "*_i686", "*_universal2"]
 build-frontend = "build"
 build-verbosity = 1
