--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,9 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Information Analysis",
 ]
 dependencies = [
-  "numpy; python_version >='3.7'",
-  "toolz; python_version >='3.7'",
-  "matplotlib; python_version >='3.7'",
+  "numpy",
+  "toolz",
+  "matplotlib",
 ]
 description = "GPU-accelerated image processing in python using OpenCL"
 name = "pyclesperanto"
