--- a/.github/workflows/auto-update-pr.yml
+++ b/.github/workflows/auto-update-pr.yml
@@ -48,9 +48,11 @@ jobs:
 
 
       - name: get gencle and update pyclesperanto
+        env:
+            GH_TOKEN: ${{ secrets.RELEASE_PAT }}
         run: |
-          git clone https://github.com/clEsperanto/gencle gencle
-          python ./gencle/pyclesperanto_auto_update.py ${{ github.workspace }} "clEsperanto/CLIc" ${{ github.event.inputs.release_tag }}
+            git clone https://$RELEASE_PAT@github.com/clEsperanto/gencle.git gencle
+            python ./gencle/pyclesperanto_auto_update.py ${{ github.workspace }} "clEsperanto/CLIc" ${{ github.event.inputs.release_tag }}
 
 
       - name: Branch, Commit, and push changes
