--- a/.github/workflows/auto-update-pr.yml
+++ b/.github/workflows/auto-update-pr.yml
@@ -42,10 +42,10 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.RELEASE_PAT }}
         run: |
-            gh issue create --title "Auto-update pyclesperanto to version ${{ github.event.client_payload.release_tag }}" \
-            --body "This issue is created by the auto-update workflow.\npyclesperanto can be updated with the CLIc version ${{ github.event.client_payload.release_tag }}.\n\nSee [Release Notes](https://github.com/clEsperanto/CLIc/releases/tag/${{ github.event.client_payload.release_tag }})" \
-            --label "auto-update"
-            export ISSUE_NUMBER=$(gh issue list --label "auto-update" --limit 1 --json number --jq '.[0].number')
+          gh issue create --title "Auto-update pyclesperanto to version ${{ github.event.client_payload.release_tag }}" \
+          --body $'## Auto-update pyclesperanto\n\nThis issue has been automatically created by the auto-update workflow.\n\n### Update Details\n- **pyclesperanto Version:** ${{ github.event.client_payload.release_tag }}\n- **CLIc Version:** ${{ github.event.client_payload.release_tag }}\n\n### Action Required\nPlease update pyclesperanto to the specified version.\n\n### Additional Information\nFor more details, refer to the [Release Notes](https://github.com/clEsperanto/CLIc/releases/tag/${{ github.event.client_payload.release_tag }}).\n\nThank you!' \
+          --label "auto-update"
+          export ISSUE_NUMBER=$(gh issue list --label "auto-update" --limit 1 --json number --jq '.[0].number')
 
 
       - name: get gencle and update pyclesperanto
@@ -74,7 +74,7 @@ jobs:
             gh auth login --with-token <<< "${{ secrets.RELEASE_PAT }}"
             gh pr create \
                 --title "Auto-update pyclesperanto to version ${{ github.event.client_payload.release_tag }}." \
-                --body "This PR updates pyclesperanto tiers code to `clEsperanto/CLIc@${{ github.event.client_payload.release_tag }}`.\n\ncloses #${{ env.ISSUE_NUMBER }}" \
+                --body $'This PR updates pyclesperanto tiers code to `clEsperanto/CLIc@${{ github.event.client_payload.release_tag }}`.\n\ncloses #${{ env.ISSUE_NUMBER }}'' \
                 --head auto-update-${{ github.event.client_payload.release_tag }} \
                 --base main \
                 --label "auto-update"
