--- a/.github/workflows/auto-update-pr.yml
+++ b/.github/workflows/auto-update-pr.yml
@@ -1,4 +1,4 @@
-name: auto-update-pr
+name: Auto Update
 
 on:
   repository_dispatch:
@@ -22,6 +22,10 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
       - name: Install GitHub CLI
         run: |
