--- a/.github/workflows/auto-update-pr.yml
+++ b/.github/workflows/auto-update-pr.yml
@@ -5,7 +5,7 @@ on:
     types: [clic_update]
 
 jobs:
-  handle-custom-event:
+  run-cle-roboto:
     runs-on: ubuntu-latest
     steps:
       - name: Print release tag
